@@ -29,6 +29,13 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">move_list_shipment_in</field>
         </record>
 
+        <record model="ir.ui.view" id="move_view_list_shipment">
+            <field name="model">stock.move</field>
+            <field name="type">tree</field>
+            <field name="priority" eval="20"/>
+            <field name="name">move_list_shipment</field>
+        </record>
+
         <record model="ir.action.act_window" id="act_move_form">
             <field name="name">Moves</field>
             <field name="res_model">stock.move</field>
